# Image-Segmentation

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  Readme.md  main.cpp
header/: ImageSegmentation.h  KDTree.h  MorphologicalProcessing.h  libs.h
src/: ImageSegmentation.cpp  KDTree.cpp  MorphologicalProcessing.cpp  libs.cpp
